--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-device": "^5.2.1",
+    "expo-fast-image": "^1.1.3",
+    "expo-file-system": "~15.2.2",
     "expo-font": "^11.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.2",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
