--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-API_URL=http://192.168.0.135:3001/
+API_URL=http://localhost:3001/
+FIREBASE_API_KEY=AIzaSyBjFkyJADkLoOAnn1RXmZDFitEXdqzVdbA
+FIREBASE_PROJECTID=leafy-b24e4
+FIREBASE_SENDERID=414025728654
+FIREBASE_APPID=1:414025728654:android:994eaa55e5e7591cb5ffdf
