--- a/package.json
+++ b/package.json
@@ -11,29 +11,38 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/netinfo": "9.3.7",
+    "@react-native-firebase/app": "^18.1.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-camera": "^13.2.1",
     "expo-device": "^5.2.1",
     "expo-fast-image": "^1.1.3",
-    "expo-file-system": "~15.2.2",
+    "expo-file-system": "^15.2.2",
     "expo-font": "^11.1.1",
+    "expo-image-manipulator": "^11.1.1",
+    "expo-image-picker": "^14.1.1",
+    "expo-notifications": "^0.18.1",
+    "expo-permissions": "^14.1.1",
     "expo-status-bar": "~1.4.4",
-    "firebase": "^9.22.2",
+    "firebase": "^9.23.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "13.4.0",
     "react-native-svg-uri": "^1.2.3",
+    "react-native-switch": "^1.5.1",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.1.0",
     "redux": "^4.2.1",
