--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "^7.3.0",
     "@react-native-community/netinfo": "9.3.7",
     "@react-native-firebase/app": "^18.1.0",
     "@react-navigation/native": "^6.1.6",
@@ -25,8 +26,10 @@
     "expo-font": "^11.1.1",
     "expo-image-manipulator": "^11.1.1",
     "expo-image-picker": "^14.1.1",
+    "expo-location": "~15.1.1",
     "expo-notifications": "^0.18.1",
     "expo-permissions": "^14.1.1",
+    "expo-sensors": "^12.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.23.0",
     "moment": "^2.29.4",
