--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/datetimepicker": "^7.3.0",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-community/netinfo": "9.3.7",
     "@react-native-firebase/app": "^18.1.0",
     "@react-navigation/native": "^6.1.6",
