--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-notifications": "^0.18.1",
     "expo-permissions": "^14.1.1",
     "expo-sensors": "^12.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.23.0",
     "moment": "^2.29.4",
