--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
+    "ios-start": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
