--- a/ios/Podfile
+++ b/ios/Podfile
@@ -52,7 +52,7 @@ target 'leafy' do
 
   use_react_native!(
     :path => config[:reactNativePath],
-    :hermes_enabled => podfile_properties['expo.jsEngine'] == nil || podfile_properties['expo.jsEngine'] == 'hermes',
+    :hermes_enabled => true,
     :fabric_enabled => flags[:fabric_enabled],
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/..",
@@ -69,6 +69,17 @@ target 'leafy' do
       :mac_catalyst_enabled => false
     )
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
+    
+#      installer.pods_project.targets.each do |target|
+#         if (target.name&.eql?('FBReactNativeSpec'))
+#           target.build_phases.each do |build_phase|
+#             if (build_phase.respond_to?(:name) && build_phase.name.eql?('[CP-User] Generate Specs'))
+#               target.build_phases.move(build_phase, 0)
+#             end
+#           end
+#         end
+
+
 
     # This is necessary for Xcode 14, because it signs resource bundles by default
     # when building for devices.
